@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2003/06/29 20:05:35 jdolecek Exp $
+$NetBSD: distinfo,v 1.5 2003/06/30 18:02:05 jdolecek Exp $
 
-SHA1 (vmware-netbsd-3.2.1.1.tar.bz2) = 7abba7c0134d7aed22243af4bff6b766b23d0ef7
-Size (vmware-netbsd-3.2.1.1.tar.bz2) = 81481 bytes
+SHA1 (vmware-netbsd-3.2.1.2.tar.bz2) = 90ce5f67175afb6e5b8c9d64b0c82a6610524793
+Size (vmware-netbsd-3.2.1.2.tar.bz2) = 81494 bytes
 SHA1 (patch-ab) = 412a3fa0a49aebe5f52cb46015fb9b981625f4ac
